# miniguest

./: .envrc  .gitignore  CONTRIBUTING.md  COPYING.ISC  INSTALL.md  LICENSE  README.md  Taskfile.yaml  USAGE.md  default.nix  devshell.toml  flake.nix  shell.nix
.github/: PULL_REQUEST_TEMPLATE.md
checks/: declarative-management.nix  default.nix  imperative-management.nix  simple-guests.nix  templates.nix
checks/data/flake1/: flake.nix
core/: default.nix  flake.nix
core/internal/: build.nix  lxc-glue.nix  qemu-glue.nix
declarative/: default.nix  flake.nix  internal.nix
lib/: compat.nix
miniguest/: create.bash  create_arg.bash  default.nix  flake.nix  functions.bash  install.bash  install_arg.bash  main.bash  main_arg.bash  miniguest.bash  miniguest.sh  overlay.nix  package.nix  remove.bash  upgrade.bash  upgrade_arg.bash
modules/: flake.nix  miniguest.nix
modules/internal/: build.nix  lxc-glue.nix  qemu-glue.nix
modules/profiles/: kvm-guest.nix  lxc-guest.nix  qemu-guest.nix
nix/: devshell.nix  devshell.toml  flake-compat.nix  set-boost-root.nix
template/: COPYING  README.md  flake.nix  shell.nix
template/guests/container/: default.nix  domain.xml
template/guests/stateless/: default.nix  domain.xml
templates/: libvirt-kvm.xml
tool/: .clang-format  build.cpp  common.cpp  common.hpp  create.bash  create.cpp  create_arg.bash  flake.nix  functions.bash  install.bash  install.cpp  install_arg.bash  lxc-template.nix  main.bash  main.cpp  main_arg.bash  manifest.hpp  meson.build  package.nix  remove.cpp  remove_arg.bash  template.bash  template_arg.bash  upgrade.cpp
tool/misc/bash-completion/completions/: miniguest
tool/misc/fish/: completion.fish
tool/misc/zsh/site-functions/: _miniguest
